Fix flash message alignment and color

--- a/app/static/styles/womens_activism.css
+++ b/app/static/styles/womens_activism.css
@@ -265,6 +265,7 @@ p, div {
 }
 #flash-messages {
     background-color: #673c74;
+    color: white;
 }
 #flash-messages .alert {
     margin: 20px auto;
@@ -1634,3 +1635,4 @@ p, div {
     padding-top: 75px;
     display: inline-block;
 }
+
